2017-10-08         Arnold D. Robbins     <arnold@skeeve.com>

	* command.y: Fix the FSF's address.

2017-10-08         Arnold D. Robbins     <arnold@skeeve.com>

	* NEWS: Rationalized with respect to stuff on the API.
	Also rationalized with respect to the pretty printer changes.

2017-10-04         Andrew J. Schorr      <aschorr@telemetry-investments.com>

	* README: Fix grammar by removing a stray word.

2017-10-04         Arnold D. Robbins     <arnold@skeeve.com>

	* NEWS: Add a note about OS/2 not working.

2017-10-02         Arnold D. Robbins     <arnold@skeeve.com>

	* config.guess, config.sub: Updated.

2017-09-28         Arnold D. Robbins     <arnold@skeeve.com>

	* io.c (devopen): Move declaration of `cp' to where it's first used.

2017-09-18         Arnold D. Robbins     <arnold@skeeve.com>

	* README: Update required version of texinfo.tex.
	* compile, config.guess, config.sub, depcomp: Updated.

2017-09-17         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkapi.h: Small changes to make it usable with C++.

2017-09-13         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (command.c): Don't need the dependency on awkgram.c
	anymore.
	* bisonfix.awk: Removed.
	* README: Revised to describe use of Bison exclusively.

2017-09-13         Andrew J. Schorr      <aschorr@telemetry-investments.com>

	* Makefile.am (awkgram.c): Use -o option to bison. Get rid of
	messing with y.tab.h, that was obsolete.
	(EXTRA_DIST): Don't need bisonfix.awk anymore.

2017-09-12         Petr Ovtchenkov       <ptr@void-ptr.info>
		   Andrew J. Schorr      <aschorr@telemetry-investments.com>

	* Makefile.am (command.c): Make dependant on awkgram.c so
	that bison is run serially with make -j.  Use -o option so
	that we no longer need bisonfix.awk in this rule.

2017-08-28         Arnold D. Robbins     <arnold@skeeve.com>

	* interpret.h (r_interpret): Add some casts to avoid warning
	messages in printf statements.

	Unrelated:
