@@ -1,3 +1,8 @@
+2017-10-14         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* field.c (do_split): Simplify the lint warnings.
+	Based on suggested code by Eric Pruitt <eric.pruitt@gmail.com>.
+
 2017-10-08         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* command.y: Fix the FSF's address.
